@@ -1,8 +1,12 @@
 package com.example.SBA_M.service.impl;
 
+import co.elastic.clients.elasticsearch.ElasticsearchClient;
+import com.example.SBA_M.dto.response.UniversityMajorSearchResponse;
+import com.example.SBA_M.entity.queries.UniversityMajorSearch;
 import com.example.SBA_M.dto.request.UniversityMajorRequest;
 import com.example.SBA_M.dto.response.PageResponse;
 import com.example.SBA_M.dto.response.UniversityMajorResponse;
+import com.example.SBA_M.dto.response.UniversitySubjectCombinationSearchResponse;
 import com.example.SBA_M.dto.response.major_search_response.MajorAdmissionResponse;
 import com.example.SBA_M.dto.response.major_search_response.MajorAdmissionYearGroup;
 import com.example.SBA_M.dto.response.major_search_response.MajorMethodGroup;
@@ -17,10 +21,7 @@ import com.example.SBA_M.entity.queries.AdmissionEntriesDocument;
 import com.example.SBA_M.exception.AppException;
 import com.example.SBA_M.exception.ErrorCode;
 import com.example.SBA_M.mapper.UniversityMajorMapper;
-import com.example.SBA_M.repository.commands.AdmissionMethodRepository;
-import com.example.SBA_M.repository.commands.MajorRepository;
-import com.example.SBA_M.repository.commands.UniversityMajorRepository;
-import com.example.SBA_M.repository.commands.UniversityRepository;
+import com.example.SBA_M.repository.commands.*;
 import com.example.SBA_M.repository.queries.UniversityMajorReadRepository;
 import com.example.SBA_M.service.UniversityMajorService;
 import com.example.SBA_M.service.messaging.producer.UniversityMajorProducer;
@@ -28,14 +29,27 @@ import com.example.SBA_M.utils.Status;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
+import co.elastic.clients.elasticsearch._types.query_dsl.*;
+import co.elastic.clients.elasticsearch.core.SearchRequest;
+import co.elastic.clients.elasticsearch.core.SearchResponse;
+
 import org.springframework.stereotype.Service;
 
+
+import java.io.IOException;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UniversityMajorServiceImpl implements UniversityMajorService {
+    private static final String INDEX_NAME = "university_major_search";
+    private static final String FIELD_SUBJECT_COMBINATION_ID = "subjectCombinationId";
+    private static final String FIELD_MAJOR_ID = "majorId";
+    private static final String FIELD_STATUS = "status";
+    private static final String FIELD_PROVINCE = "province";
+    private static final String STATUS_ACTIVE = "ACTIVE";
+    private static final int DEFAULT_MAX_RESULTS = 100;
 
     private final UniversityRepository universityRepository;
     private final MajorRepository majorRepository;
@@ -46,6 +60,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     private final UniversityMajorMapper universityMajorMapper;
     private final UniversityMajorProducer universityMajorProducer;
     private final UniversityMajorReadRepository universityMajorReadRepository;
+    private final SubjectCombinationRepository subjectCombinationService;
+    private final ElasticsearchClient elasticsearchClient;
 
     @Override
     public PageResponse<UniversityMajorResponse> getAllUniversityMajors(int page, int size) {
@@ -68,7 +84,7 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
 
     @Override
     public UniversityMajorResponse getUniversityMajorById(Integer id) {
-        UniversityMajor um = universityMajorRepository.findByIdAndStatus(id, Status.ACTIVE)
+        UniversityMajor um = universityMajorRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
         return universityMajorMapper.toResponse(um);
     }
@@ -80,7 +96,10 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_NOT_FOUND));
         Major major = majorRepository.findByIdAndStatus(request.getMajorId(), Status.ACTIVE)
                 .orElseThrow(() -> new AppException(ErrorCode.MAJOR_NOT_FOUND));
-
+        List<SubjectCombination> subjectCombination = subjectCombinationService.findAllById(request.getSubjectCombinationIds());
+        if (subjectCombination.size() != request.getAdmissionMethodIds().size()) {
+            throw new AppException(ErrorCode.INVALID_PARAM, "Some admission methods not found");
+        }
         List<AdmissionMethod> methods = admissionMethodRepository.findAllById(request.getAdmissionMethodIds());
         if (methods.size() != request.getAdmissionMethodIds().size()) {
             throw new AppException(ErrorCode.INVALID_PARAM, "Some admission methods not found");
@@ -90,25 +109,27 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         entity.setUniversity(university);
         entity.setMajor(major);
         entity.setAdmissionMethods(methods);
-        entity.setYear(request.getYear());
+        entity.setSubjectCombinations(subjectCombination);
+        entity.setUniversityMajorName(request.getUniversityMajorName());
         entity.setScore(request.getScores());
         entity.setQuota(request.getQuota());
         entity.setNotes(request.getNotes());
 
         UniversityMajor saved = universityMajorRepository.save(entity);
        universityMajorProducer.sendCreateEvents(saved);
+        universityMajorProducer.sendSearchEvent(saved);
         return universityMajorMapper.toResponse(saved);
     }
 
     @Override
     @Transactional
     public UniversityMajorResponse updateUniversityMajor(Integer id, UniversityMajorRequest request) {
-        UniversityMajor existing = universityMajorRepository.findByIdAndStatus(id, Status.ACTIVE)
+        UniversityMajor existing = universityMajorRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
 
         List<Integer> methodIds = request.getAdmissionMethodIds();
         List<AdmissionMethod> methods = admissionMethodRepository.findAllByIdInAndStatus(methodIds, Status.ACTIVE);
-
+        List<SubjectCombination> subjectCombinations = subjectCombinationService.findAllById(request.getSubjectCombinationIds());
         Set<Integer> foundIds = methods.stream()
                 .map(AdmissionMethod::getId)
                 .collect(Collectors.toSet());
@@ -122,23 +143,26 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         }
 
         existing.setAdmissionMethods(methods);
+        existing.setSubjectCombinations(subjectCombinations);
         existing.setScore(request.getScores());
         existing.setQuota(request.getQuota());
         existing.setNotes(request.getNotes());
-        existing.setYear(request.getYear());
+        existing.setUniversityMajorName(request.getUniversityMajorName());
 
         UniversityMajor saved = universityMajorRepository.save(existing);
         universityMajorProducer.sendCreateEvents(saved);
+        universityMajorProducer.sendSearchEvent(saved);
         return universityMajorMapper.toResponse(saved);
     }
 
     @Override
     @Transactional
     public void deleteUniversityMajor(Integer id) {
-        UniversityMajor um = universityMajorRepository.findById(id)
+        UniversityMajor um = universityMajorRepository.findByIdAndStatus(id, Status.ACTIVE)
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
         um.setStatus(Status.DELETED);
         universityMajorRepository.save(um);
+        universityMajorProducer.sendSearchEvent(um);
         universityMajorProducer.sendCreateEvents(um);
     }
 
@@ -146,12 +170,10 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     public AdmissionUniversityTuitionResponse getAdmissionYearGroupsByUniversityId(Integer universityId) {
         List<AdmissionEntriesDocument> entries = universityMajorReadRepository
                 .findByUniversityIdAndStatus(universityId, Status.ACTIVE);
-
         if (entries.isEmpty()) {
             return null;
         }
-
-        String universityName = entries.get(0).getUniversityName();
+        String universityName = entries.getFirst().getUniversityName();
 
         // Group data: year -> method -> major -> subjectCombination
         Map<Integer, Map<Integer, Map<Long, List<AdmissionEntriesDocument>>>> grouped = new TreeMap<>(Collections.reverseOrder());
@@ -177,10 +199,9 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                                         .map(AdmissionEntriesDocument::getMethodName)
                                         .orElse(null);
 
-                                List<MajorEntry> majors = methodEntry.getValue().entrySet().stream()
-                                        .map(majorEntry -> {
-                                            List<AdmissionEntriesDocument> docs = majorEntry.getValue();
-                                            AdmissionEntriesDocument any = docs.get(0);
+                                List<MajorEntry> majors = methodEntry.getValue().values().stream()
+                                        .map(docs -> {
+                                            AdmissionEntriesDocument any = docs.getFirst();
 
                                             List<SubjectCombinationTuitionScore> scores = docs.stream()
                                                     .map(d -> new SubjectCombinationTuitionScore(
@@ -218,8 +239,6 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 years
         );
     }
-
-
     @Override
     public MajorAdmissionResponse getMajorAdmissionByUniversityAndMajor(Integer universityId, Long majorId) {
         List<AdmissionEntriesDocument> entries = universityMajorReadRepository
@@ -236,8 +255,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         }
 
         // Extract static info from the first entry
-        String universityName = entries.get(0).getUniversityName();
-        String majorName = entries.get(0).getMajorName();
+        String universityName = entries.getFirst().getUniversityName();
+        String majorName = entries.getFirst().getMajorName();
 
         // Grouping: year -> methodId -> methodName -> subjectCombination -> score + note
         Map<Integer, Map<Integer, Map<String, SubjectCombinationScore>>> grouped = new TreeMap<>(Collections.reverseOrder());
@@ -292,8 +311,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
             return null;
         }
 
-        String universityName = entries.get(0).getUniversityName();
-        String subjectCombination = entries.get(0).getSubjectCombination();
+        String universityName = entries.getFirst().getUniversityName();
+        String subjectCombination = entries.getFirst().getSubjectCombination();
 
         // Map to avoid repeated method name lookups
         Map<Integer, String> methodNameMap = entries.stream()
@@ -339,6 +358,94 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 years
         );
     }
+    @Override
+    public List<UniversitySubjectCombinationSearchResponse> searchBySubjectCombination(
+            Long subjectCombinationId, Long majorId, String province) throws IOException {
+        validateSubjectCombinationId(subjectCombinationId);
 
+        BoolQuery.Builder boolQuery = new BoolQuery.Builder()
+                .must(m -> m.term(t -> t.field(FIELD_SUBJECT_COMBINATION_ID).value(subjectCombinationId)))
+                .must(m -> m.term(t -> t.field(FIELD_STATUS).value(STATUS_ACTIVE)));
+
+        if (majorId != null) {
+            boolQuery.filter(f -> f.term(t -> t.field(FIELD_MAJOR_ID).value(majorId)));
+        }
+
+        if (isValidString(province)) {
+            boolQuery.filter(f -> f.term(t -> t.field(FIELD_PROVINCE).value(province.trim())));
+        }
+
+        SearchResponse<UniversityMajorSearch> response = executeSearch(boolQuery.build());
+        return response.hits().hits().stream()
+                .map(hit -> {
+                    UniversityMajorSearch doc = hit.source();
+                    if (doc == null) {
+                        return null;
+                    }
+                    return new UniversitySubjectCombinationSearchResponse(
+                            doc.getUniversityName(),
+                            doc.getUniversityMajorCountBySubjectCombination());
+                })
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    @Override
+    public List<UniversityMajorSearchResponse> searchByMajor(
+            Long majorId, String province, String method, Long subjectCombinationId) throws IOException {
+        validateMajorId(majorId);
+
+        BoolQuery.Builder boolQuery = new BoolQuery.Builder()
+                .must(m -> m.term(t -> t.field(FIELD_MAJOR_ID).value(majorId)))
+                .must(m -> m.term(t -> t.field(FIELD_STATUS).value(STATUS_ACTIVE)));
+
+        if (isValidString(province)) {
+            boolQuery.filter(f -> f.term(t -> t.field(FIELD_PROVINCE).value(province.trim())));
+        }
+
+        if (subjectCombinationId != null) {
+            boolQuery.filter(f -> f.term(t -> t.field(FIELD_SUBJECT_COMBINATION_ID).value(subjectCombinationId)));
+        }
+
+        SearchResponse<UniversityMajorSearch> response = executeSearch(boolQuery.build());
+        return response.hits().hits().stream()
+                .map(hit -> {
+                    UniversityMajorSearch doc = hit.source();
+                    if (doc == null) {
+                        return null;
+                    }
+                    return new UniversityMajorSearchResponse(
+                            doc.getUniversityName(),
+                            doc.getUniversityMajorCountByMajor());
+                })
+                .filter(Objects::nonNull)
+                .toList();
+    }
+
+    private SearchResponse<UniversityMajorSearch> executeSearch(BoolQuery boolQuery) throws IOException {
+        SearchRequest searchRequest = SearchRequest.of(s -> s
+                .index(INDEX_NAME)
+                .query(q -> q.bool(boolQuery))
+                .size(DEFAULT_MAX_RESULTS));
+
+        try {
+            return elasticsearchClient.search(searchRequest, UniversityMajorSearch.class);
+        } catch (IOException e) {
+            throw new AppException(ErrorCode.SEARCH_FAILED, "Search operation failed: " + e.getMessage());
+        }
+    }
+    private void validateSubjectCombinationId(Long subjectCombinationId) {
+        if (subjectCombinationId == null || subjectCombinationId <= 0) {
+            throw new AppException(ErrorCode.INVALID_PARAM, "Subject combination ID must be a positive long");
+        }
+    }
+    private boolean isValidString(String input) {
+        return input != null && !input.trim().isEmpty();
+    }
+    private void validateMajorId(Long majorId) {
+        if (majorId == null || majorId <= 0) {
+            throw new AppException(ErrorCode.INVALID_PARAM, "Major ID must be a positive long");
+        }
+    }
 
 }
